// Code generated by sqlc. DO NOT EDIT.
// versions:
//   sqlc v1.30.0

package db

import (
	"database/sql"
	"database/sql/driver"
	"fmt"
	"time"

	"github.com/google/uuid"
)

type AdminPermission string

const (
	AdminPermissionView       AdminPermission = "view"
	AdminPermissionEdit       AdminPermission = "edit"
	AdminPermissionFullAccess AdminPermission = "full_access"
)

func (e *AdminPermission) Scan(src interface{}) error {
	switch s := src.(type) {
	case []byte:
		*e = AdminPermission(s)
	case string:
		*e = AdminPermission(s)
	default:
		return fmt.Errorf("unsupported scan type for AdminPermission: %T", src)
	}
	return nil
}

type NullAdminPermission struct {
	AdminPermission AdminPermission `json:"admin_permission"`
	Valid           bool            `json:"valid"` // Valid is true if AdminPermission is not NULL
}

// Scan implements the Scanner interface.
func (ns *NullAdminPermission) Scan(value interface{}) error {
	if value == nil {
		ns.AdminPermission, ns.Valid = "", false
		return nil
	}
	ns.Valid = true
	return ns.AdminPermission.Scan(value)
}

// Value implements the driver Valuer interface.
func (ns NullAdminPermission) Value() (driver.Value, error) {
	if !ns.Valid {
		return nil, nil
	}
	return string(ns.AdminPermission), nil
}

type RoleType string

const (
	RoleTypeAdmin     RoleType = "admin"
	RoleTypeCustomer  RoleType = "customer"
	RoleTypeGuestUser RoleType = "guest_user"
)

func (e *RoleType) Scan(src interface{}) error {
	switch s := src.(type) {
	case []byte:
		*e = RoleType(s)
	case string:
		*e = RoleType(s)
	default:
		return fmt.Errorf("unsupported scan type for RoleType: %T", src)
	}
	return nil
}

type NullRoleType struct {
	RoleType RoleType `json:"role_type"`
	Valid    bool     `json:"valid"` // Valid is true if RoleType is not NULL
}

// Scan implements the Scanner interface.
func (ns *NullRoleType) Scan(value interface{}) error {
	if value == nil {
		ns.RoleType, ns.Valid = "", false
		return nil
	}
	ns.Valid = true
	return ns.RoleType.Scan(value)
}

// Value implements the driver Valuer interface.
func (ns NullRoleType) Value() (driver.Value, error) {
	if !ns.Valid {
		return nil, nil
	}
	return string(ns.RoleType), nil
}

type Guest struct {
	GuestID    uuid.UUID      `json:"guest_id"`
	UserAgent  sql.NullString `json:"user_agent"`
	IpAddress  sql.NullString `json:"ip_address"`
	CreatedAt  sql.NullTime   `json:"created_at"`
	LastActive sql.NullTime   `json:"last_active"`
	Slug       uuid.NullUUID  `json:"slug"`
}

type GuestRefreshToken struct {
	ID              uuid.UUID      `json:"id"`
	GuestID         uuid.UUID      `json:"guest_id"`
	Token           string         `json:"token"`
	ExpiresAt       time.Time      `json:"expires_at"`
	CreatedAt       sql.NullTime   `json:"created_at"`
	Revoked         sql.NullBool   `json:"revoked"`
	ReplacedByToken sql.NullString `json:"replaced_by_token"`
	UserAgent       sql.NullString `json:"user_agent"`
	IpAddress       sql.NullString `json:"ip_address"`
}

type Permission struct {
	ID          uuid.UUID           `json:"id"`
	Name        NullAdminPermission `json:"name"`
	Description sql.NullString      `json:"description"`
	Slug        uuid.NullUUID       `json:"slug"`
}

type RefreshToken struct {
	ID              uuid.UUID      `json:"id"`
	UserID          uuid.UUID      `json:"user_id"`
	Token           string         `json:"token"`
	ExpiresAt       time.Time      `json:"expires_at"`
	CreatedAt       sql.NullTime   `json:"created_at"`
	Revoked         sql.NullBool   `json:"revoked"`
	ReplacedByToken sql.NullString `json:"replaced_by_token"`
	UserAgent       sql.NullString `json:"user_agent"`
	IpAddress       sql.NullString `json:"ip_address"`
}

type Role struct {
	ID          uuid.UUID      `json:"id"`
	Name        NullRoleType   `json:"name"`
	Description sql.NullString `json:"description"`
	Slug        uuid.NullUUID  `json:"slug"`
}

type User struct {
	ID           uuid.UUID      `json:"id"`
	Name         sql.NullString `json:"name"`
	Email        string         `json:"email"`
	PasswordHash sql.NullString `json:"password_hash"`
	IsActive     sql.NullBool   `json:"is_active"`
	CreatedAt    sql.NullTime   `json:"created_at"`
	UpdatedAt    sql.NullTime   `json:"updated_at"`
	Slug         uuid.NullUUID  `json:"slug"`
}

type UserPermission struct {
	UserID       uuid.UUID `json:"user_id"`
	PermissionID uuid.UUID `json:"permission_id"`
}

type UserRole struct {
	UserID uuid.UUID `json:"user_id"`
	RoleID uuid.UUID `json:"role_id"`
}
