erDiagram
    USERS }|--o{ ORGANIZER_PAGES : owns
    ORGANIZER_PAGES }|--o{ EVENTS : owns
    USERS }|--o{ EVENTS : creates
    USERS }|--o{ TICKETS : owns
    USERS }|--o{ ALLOCATIONS : initiates
    USERS }|--o{ ALLOCATIONS : receives
    USERS }|--o{ ORDERS : places

    EVENTS }|--o{ EVENT_MEDIA_ASSETS : has
    EVENTS }|--o{ EVENT_FAQS : has
    EVENTS }|--o{ EVENT_DAYS : has
    EVENTS }|--o{ TICKET_TYPES : has
    EVENTS }|--o{ TICKETS : has
    EVENTS }|--o{ ALLOCATIONS : has
    EVENTS }|--o{ ORDERS : has

    ORDERS }|--o{ ALLOCATIONS : has
    ORDERS }|--o{ TICKETS : locks
    ORDERS ||--o| ORDER_COUPONS : has_discount

    COUPONS }|--o{ ORDER_COUPONS : used_in

    EVENT_DAYS }|--o{ DAY_TICKET_ALLOCATIONS : has
    EVENT_DAYS }|--o{ TICKETS : has
    EVENT_DAYS }|--o{ SCAN_LOGS : has
    EVENT_DAYS ||--|| EVENT_DAY_BITMAP_SNAPSHOTS : has_snapshot

    TICKET_TYPES }|--o{ DAY_TICKET_ALLOCATIONS : has
    TICKET_TYPES }|--o{ TICKETS : has

    ALLOCATIONS }|--o{ ALLOCATION_TICKETS : contains
    TICKETS }|--o{ ALLOCATION_TICKETS : is_part_of

    TICKETS ||--o| SCAN_LOGS : logs_scan

    USERS {
        UUID id PK
        TEXT username
        TEXT email
        TEXT password_hash
        TEXT status
        TIMESTAMP created_at
        TIMESTAMP updated_at
    }

    GUESTS {
        UUID id PK
        TEXT signature UK
        TEXT user_agent
        TEXT ip_address
        TEXT status
        TIMESTAMP created_at
        TIMESTAMP updated_at
    }

    ORGANIZER_PAGES {
        UUID id PK
        UUID owner_user_id FK
        TEXT name
        TEXT slug UK
        TEXT bio
        TEXT logo_url
        TEXT cover_image_url
        TEXT website_url
        TEXT instagram_url
        TEXT facebook_url
        TEXT youtube_url
        TEXT visibility
        TEXT status
        TIMESTAMP created_at
        TIMESTAMP updated_at
    }

    EVENTS {
        UUID id PK
        UUID organizer_page_id FK
        UUID created_by_user_id FK
        TEXT title
        TEXT slug UK
        TEXT description
        TEXT event_type
        TEXT status
        TEXT event_access_type
        JSONB setup_status
        TEXT location_mode
        TEXT timezone
        DATE start_date
        DATE end_date
        TEXT venue_name
        TEXT venue_address
        TEXT venue_city
        TEXT venue_state
        TEXT venue_country
        NUMERIC venue_latitude
        NUMERIC venue_longitude
        TEXT venue_google_place_id
        TEXT online_event_url
        TEXT recorded_event_url
        TIMESTAMP published_at
        TIMESTAMP created_at
        TIMESTAMP updated_at
    }

    EVENT_MEDIA_ASSETS {
        UUID id PK
        UUID event_id FK
        TEXT asset_type
        TEXT storage_key
        TEXT public_url
        TEXT title
        TEXT caption
        TEXT alt_text
        INT sort_order
        BOOLEAN is_primary
        TIMESTAMP created_at
        TIMESTAMP updated_at
    }

    EVENT_FAQS {
        UUID id PK
        UUID event_id FK
        TEXT question
        TEXT answer
        INT sort_order
        BOOLEAN is_published
        TIMESTAMP created_at
        TIMESTAMP updated_at
    }

    EVENT_DAYS {
        UUID id PK
        UUID event_id FK
        INT day_index
        DATE date
        TIMESTAMP start_time
        TIMESTAMP end_time
        TEXT scan_status
        TIMESTAMP scan_started_at
        TIMESTAMP scan_paused_at
        TIMESTAMP scan_ended_at
        INT next_ticket_index
        TIMESTAMP created_at
        TIMESTAMP updated_at
    }

    TICKET_TYPES {
        UUID id PK
        UUID event_id FK
        TEXT name
        TEXT category
        NUMERIC price
        TEXT currency
        TIMESTAMP created_at
        TIMESTAMP updated_at
    }

    DAY_TICKET_ALLOCATIONS {
        UUID id PK
        UUID event_day_id FK
        UUID ticket_type_id FK
        INT quantity
        TIMESTAMP created_at
        TIMESTAMP updated_at
    }

    TICKETS {
        UUID id PK
        UUID event_id FK
        UUID event_day_id FK
        UUID ticket_type_id FK
        INT ticket_index
        TEXT seat_label
        JSONB seat_metadata
        UUID owner_user_id FK
        TEXT status
        UUID locked_by_order_id FK
        TIMESTAMP lock_expires_at
        TIMESTAMP created_at
        TIMESTAMP updated_at
    }

    ALLOCATIONS {
        UUID id PK
        UUID event_id FK
        UUID from_user_id FK
        UUID to_user_id FK
        UUID order_id FK
        TEXT source_type
        TEXT status
        TIMESTAMP created_at
        TIMESTAMP updated_at
    }

    ALLOCATION_TICKETS {
        UUID allocation_id PK,FK
        UUID ticket_id PK,FK
    }

    ORDERS {
        UUID id PK
        UUID event_id FK
        TEXT type
        UUID user_id FK
        NUMERIC subtotal_amount
        NUMERIC discount_amount
        NUMERIC final_amount
        TEXT status
        TIMESTAMP created_at
        TIMESTAMP updated_at
    }

    COUPONS {
        UUID id PK
        TEXT code UK
        TEXT type
        NUMERIC value
        NUMERIC max_discount
        NUMERIC min_order_amount
        INT usage_limit
        INT per_user_limit
        INT used_count
        TIMESTAMP valid_from
        TIMESTAMP valid_until
        BOOLEAN is_active
        TIMESTAMP created_at
        TIMESTAMP updated_at
    }

    ORDER_COUPONS {
        UUID order_id PK,FK
        UUID coupon_id FK
        NUMERIC discount_applied
    }

    SCAN_LOGS {
        BIGSERIAL id PK
        UUID event_day_id FK
        INT ticket_index FK
        TIMESTAMP scanned_at
    }

    EVENT_DAY_BITMAP_SNAPSHOTS {
        UUID event_day_id PK,FK
        BYTEA bitmap_data
        TIMESTAMP updated_at
    }
